animation tab & fixed jumping routing

--- a/src/pages/FriedPopUpTabCard/friendsTab.module.css
+++ b/src/pages/FriedPopUpTabCard/friendsTab.module.css
@@ -8,6 +8,18 @@
   min-width: 250px;
   z-index: 10000;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  transform: translateX(100%);
+  animation: slideIn 0.8s ease-out forwards, scaleUp 0.5s ease-out forwards;
+}
+
+/* Scale Up Animation */
+@keyframes scaleUp {
+  0% {
+    transform: scale(0.1); /* Initially smaller */
+  }
+  100% {
+    transform: scale(1); /* Scale to full size */
+  }
 }
 
 /* Header Styling */
@@ -36,3 +48,4 @@
 .friendPopupClose:hover {
   color: #bfc6c9;
 }
+
